--- a/jQwidgetSample/jQwidgetSample/imgwidget.html
+++ b/jQwidgetSample/jQwidgetSample/imgwidget.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <title>Jqtree</title>
     <link href="jqwidgets/styles/jqx.base.css" type="text/css" rel="stylesheet" />
@@ -22,6 +22,13 @@
            { icon: "images/Folder.jpg", label: "Product" },
            { icon: "images/Folder.jpg", label: "Solution", selected: true }
            ]
+       },
+       {
+           icon: "images/i.png", label: "Services", expanded: true, items: [
+            { icon: "images/Folder.jpg", label: "LED display" },
+            { icon: "images/Folder.jpg", label: "security system" },
+            { icon: "images/Folder.jpg", label: "Security alert" },
+            ]
        }
        ];
        $('#jqxTree').jqxTree({ source: source, width: '100%', height: '100%'});
