--- a/jQwidgetSample/jQwidgetSample/imgwidget.html
+++ b/jQwidgetSample/jQwidgetSample/imgwidget.html
@@ -5,6 +5,7 @@
     <link href="jqwidgets/styles/jqx.base.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="scripts/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="scripts/demos.js"></script>
+    <link href="jqwidgets/styles/jqx.orange.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="jqwidgets/jqxbuttons.js"></script>
     <script type="text/javascript" src="jqwidgets/jqxscrollbar.js"></script>
@@ -31,7 +32,7 @@
             ]
        }
        ];
-       $('#jqxTree').jqxTree({ source: source, width: '100%', height: '100%'});
+       $('#jqxTree').jqxTree({ theme:'orange',source: source, width: '100%', height: '100%'});
        $('#jqxTree').jqxTree('selectItem', null);
        });
  </script>
