--- a/jQwidgetSample/jQwidgetSample/Datepicker.html
+++ b/jQwidgetSample/jQwidgetSample/Datepicker.html
@@ -24,7 +24,7 @@
         <div class="box1">
             <span>From:</span>
             <input id="datetimepicker" type="text">
-            <span>To</span>
+            <span>To:</span>
             <input id="datetimepicker" type="text">
         </div>
        </div>
