Changes for Datetimepicker

--- a/jQwidgetSample/jQwidgetSample/Datepicker.html
+++ b/jQwidgetSample/jQwidgetSample/Datepicker.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <title>DateTime Picker</title>
-  <link href="DateTimePicker/jquery.datetimepicker.css" type="text/css" rel="stylesheet" />
-    <script type="text/html" src="DateTimePicker/jquery.js">    </script>
+  
+    <link href="DateTimePicker/jquery.datetimepicker.css" rel="stylesheet" />
+    <script src="DateTimePicker/jquery.js"></script>
     <script type="text/javascript" src="DateTimePicker/jquery.datetimepicker.js"></script>
-   
-   
-  
-    <script type="text/javascript">
-   
-        jQuery('#datetimepicker').datetimepicker();
-  
 
-    </script>
+    
+   
+
 
 </head>
 <body>
@@ -23,10 +19,21 @@
     <div class="wrap">
         <div class="box1">
             <span>From:</span>
-            <input id="datetimepicker" type="text">
+            <input id="datetimepicker1" type="text">
             <span>To:</span>
-            <input id="datetimepicker" type="text">
+            <input id="datetimepicker2" type="text">
         </div>
        </div>
 </body>
+
+
+
+<script type="text/javascript">
+
+    $('#datetimepicker1').datetimepicker();
+    $('#datetimepicker2').datetimepicker();
+
+
+</script>
+
 </html>
